--- a/public/footer.html
+++ b/public/footer.html
@@ -1,18 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>card</title>
+    <title>Footer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-  <img src="img_avatar.png" alt="Avatar">
-  <div class="card-txt">
-    <h3>John Doe</h3>
-    <div>Architect & Engineer</div>
-</div>  
+    
 </body>
-</html>
+</html><footer>
+    <a href="#terms">Terms and Conditions</a>
+  </footer>
